[package]
name = "pgml_rust"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg10 = ["pgx/pg10", "pgx-tests/pg10" ]
pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg_test = []

[dependencies]
anyhow = "1"
blas = { version = "0.22" }
blas-src = { version = "0.8", features = ["openblas"] }
heapless = "0.7"
lightgbm = { git="https://github.com/postgresml/lightgbm-rs" }
ndarray = { version = "0.15", features = ["serde", "blas"] }
once_cell = "1"
openblas-src = { version = "0.10", features = ["cblas", "system"] }
parking_lot = "0.12"
pyo3 = { version = "0.17", features = ["auto-initialize"] }
pgx = { git="https://github.com/postgresml/pgx.git", branch="master" }
rand = "0.8"
rmp-serde = { version = "1.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
smartcore = { git="https://github.com/smartcorelib/smartcore.git", branch="development", features = ["serde", "ndarray-bindings"] }
typetag = "0.2"
xgboost = { git="https://github.com/postgresml/rust-xgboost.git" }

[dev-dependencies]
pgx-tests = "0.4"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
