
[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg10 = ["pgx/pg10", "pgx-tests/pg10" ]
pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg_test = []

[package]
name = "benchmark"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
linfa = "0.6"
blas = "0.22"
blas-src = { version = "0.8", features = ["openblas"] }
linfa-logistic = "0.6"
linfa-svm = "0.6"
linfa-datasets = { version = "0.6", features = ["iris", "winequality"]}
openblas-src = { version = "0.10", features = ["cblas", "system"] }
pgx = { git="https://github.com/postgresml/pgx.git", branch="master" }

[dev-dependencies]
pgx-tests = "0.4"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
